--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "davejamesmiller/laravel-breadcrumbs": "^3.0",
         "hieu-le/active": "~2.0",
         "arcanedev/log-viewer": "~3.0",
-        "spatie/laravel-backup": "^3.0",
+        "spatie/laravel-backup": "^3.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
