--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "symfony/css-selector": "2.8.*|3.0.*",
         "symfony/dom-crawler": "2.8.*|3.0.*",
         "barryvdh/laravel-debugbar": "^2.1",
-        "laracasts/generators": "^1.1"
+        "laracasts/generators": "~1.1"
     },
     "autoload": {
         "classmap": [
