--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "spatie/laravel-backup": "^3.0",
         "yajra/laravel-datatables-oracle": "~6.0",
         "vinelab/http": "~1.2",
-        "spatie/laravel-medialibrary": "^3.18"
+        "spatie/laravel-medialibrary": "^3.18",
+        "cviebrock/eloquent-sluggable": "^4.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
