--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yajra/laravel-datatables-oracle": "~6.0",
         "vinelab/http": "~1.2",
         "spatie/laravel-medialibrary": "^3.18",
-        "cviebrock/eloquent-sluggable": "^4.0"
+        "cviebrock/eloquent-sluggable": "^4.0",
+        "doctrine/dbal": "^2.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
